# fastcli

./: README.md  pyproject.toml  setup.py
fast/: __init__.py  __main__.py  actions.py  create_app.sh  fast.py
