[tool.poetry]
name = "fast"
version = "0.0.1"
description = "FASTAPI CLI"
authors = ["Jônatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
setuptools = "^60.5.0"
cookiecutter = "^1.7.3"
kamidana = "^0.9.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[tool.poetry.scripts]
fast = 'fast.fast:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
